fix alignment and colors

--- a/src/MudBlazor/Styles/components/_inputcontrol.scss
+++ b/src/MudBlazor/Styles/components/_inputcontrol.scss
@@ -16,6 +16,14 @@
   &.mud-input-control-boolean-input {
     flex: none;
     margin: 0;
+
+    & .mud-radio-group {
+      display: inherit;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+    }
   }
 
   &.mud-input-outlined-with-label {
