--- a/src/MudBlazor/Styles/components/_radio.scss
+++ b/src/MudBlazor/Styles/components/_radio.scss
@@ -6,7 +6,6 @@
   align-items: center;
   vertical-align: middle;
   -webkit-tap-highlight-color: transparent;
-  color: var(--mud-palette-action-default);
 
   & > .mud-radio-content {
     color: var(--mud-palette-text-primary);
